Correct comparison vertical alignment

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -45,7 +45,7 @@ $icon-font-path: '/fonts/bootstrap/';
     white-space: pre;
 }
 
-.hue-comparison td {
+.hue-comparison tbody > tr > td {
     vertical-align: middle;
     text-align: center;
 }
